--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,10 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+input,
+textarea {
+  color: #0a0a0a;
+  padding-left: 0.25em;
+  border-radius: 0.25em;
+}
